--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
     
             <nav class="navbar">
-                <a href="#">Home</a>
+                <a href="#home">Home</a>
                 <a href="#about">Sobre</a>
                 <a href="#menu">Menu</a>
                 <a href="#review">Avaliações</a>
@@ -31,5 +31,15 @@
             </div>
         </section>
     </header>
+
+    <div class="home-container">
+        <section id="#home">
+            <div class="content">
+                <h3>CODE COM O MELHOR CAFÉ DA REGIÃO</h3>
+                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, cupiditate neque harum saepe dolore, quas magnam nihil et, eaque fugiat eum pariatur fugit dolor delectus. Ut assumenda asperiores deleniti tempora!</P>
+                <a href="#" class="btn">Pegue o seu agora</a>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
