--- a/index.html
+++ b/index.html
@@ -41,5 +41,23 @@
             </div>
         </section>
     </div>
+
+    <section class="about" id="about">
+        <h2 class="title">Sobre<span>Nós</span></h2>
+        <div class="row">
+            <div class="container-image">
+                <img src="./img/about-img.jpg" alt="Sobre nós">
+            </div>
+            <div class="content">
+                <h3>O que faz nosso Café Especial!</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit magni dolorum natus voluptate rerum nemo nihil numquam fuga! Illum tenetur dolore voluptatem dolorem. Debitis corrupti nulla consectetur mollitia illum! <br> <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur obcaecati vero optio sapiente! Amet rem voluptatum quae aspernatur. Quas, explicabo est et veritatis incidunt animi recusandae natus accusamus sed sint?</p>
+
+                <a href="#" class="btn">Saiba Mais!</a>
+            </div>
+        </div>
+
+        </div>
+    </section>
 </body>
 </html>
