--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
     
             <nav class="navbar">
-                <a href="#home">Home</a>
+                <a href="#">Home</a>
                 <a href="#about">Sobre</a>
                 <a href="#menu">Menu</a>
                 <a href="#review">Avaliações</a>
@@ -57,6 +57,111 @@
             </div>
         </div>
 
+        </div>
+    </section>
+
+    <section class="menu" id="menu">
+        <h2 class="title">Nosso<span>Menu</span></h2>
+        <div class="box-container">
+            <div class="box">
+                <img src="./img/menu-1.png" alt="item-1">
+                <h3>Café coado</h3>
+                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <a href="#" class="btn">Adicione ao carrinho</a>
+            </div>
+            <div class="box">
+                <img src="./img/menu-2.png" alt="item-2">
+                <h3>Café coado</h3>
+                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <a href="#" class="btn">Adicione ao carrinho</a>
+            </div>
+            <div class="box">
+                <img src="./img/menu-3.png" alt="item-3">
+                <h3>Café coado</h3>
+                <div class="price">R$ 13,99 <span>R$ 18,99</span></div>
+                <a href="#" class="btn">Adicione ao carrinho</a>
+            </div>
+            <div class="box">
+                <img src="./img/menu-4.png" alt="item-4">
+                <h3>Café coado</h3>
+                <div class="price">R$ 11,99 <span>R$ 12,99</span></div>
+                <a href="#" class="btn">Adicione ao carrinho</a>
+            </div>
+            <div class="box">
+                <img src="./img/menu-5.png" alt="item-5">
+                <h3>Café coado</h3>
+                <div class="price">R$ 8,99 <span>R$ 13,99</span></div>
+                <a href="#" class="btn">Adicione ao carrinho</a>
+            </div>
+            <div class="box">
+                <img src="./img/menu-6.png" alt="item-6">
+                <h3>Café coado</h3>
+                <div class="price">R$ 11,20 <span>R$ 15,99</span></div>
+                <a href="#" class="btn">Adicione ao carrinho</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="review" id="review">
+        <h2>Nossos <span>Clientes</span></h2>
+        <div class="box-container">
+            <div class="box">
+                <img src="img/quote-img.png" alt="comentário">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi cumque voluptates magnam esse, in quo? Provident rem soluta numquam similique, iusto, aut voluptatibus repudiandae culpa cum esse a voluptatum dolore.</p>
+                <img src="./img/pic-1.png" alt="foto cliente" class="user">
+                <h3>Ian Lucas</h3>
+                <div class="stars">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star-half-empty.png" alt="star-half-empty"/>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img/quote-img.png" alt="comentário">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi cumque voluptates magnam esse, in quo? Provident rem soluta numquam similique, iusto, aut voluptatibus repudiandae culpa cum esse a voluptatum dolore.</p>
+                <img src="./img/pic-2.png" alt="foto cliente" class="user">
+                <h3>Aline Mysna</h3>
+                <div class="stars">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star-half-empty.png" alt="star-half-empty"/>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img/quote-img.png" alt="comentário">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi cumque voluptates magnam esse, in quo? Provident rem soluta numquam similique, iusto, aut voluptatibus repudiandae culpa cum esse a voluptatum dolore.</p>
+                <img src="./img/pic-3.png" alt="foto cliente" class="user">
+                <h3>Israel</h3>
+                <div class="stars">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png" alt="star--v1"/>
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star-half-empty.png" alt="star-half-empty"/>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="address" id="address">
+        <h2 class="title">Nosso <span>Endereço</span></h2>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3973.9722559970114!2d-38.374268487095804!3d-5.10817327281446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7bbe6cf3cb3e1cd%3A0x564fca7615571f64!2sPadaria%20Ideal!5e0!3m2!1spt-PT!2sbr!4v1719156434887!5m2!1spt-PT!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+
+    <section class="footer">
+        <div class="share">
+            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" alt="instagram-new"/>
+
+            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/facebook.png" alt="facebook"/>
+
+            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/twitter--v1.png" alt="twitter--v1"/>
         </div>
     </section>
 </body>
